--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -303,6 +303,12 @@
 					<img src="/media/app/images/brand-logo.png" width="138" height="23" alt="Logo Yasound">
 				</a>
 			</div>
+      <div class='visible-phone responsive-settings-btn'>
+        <img src="/media/app/images/responsive-settings-btn.png">
+      </div>
+      <div class='visible-phone responsive-settings-btn2'>
+        <img src="/media/app/images/responsive-settings-btn.png">
+      </div>
             <div class="header-separation">
                 <img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
             </div>
@@ -379,7 +385,7 @@
 		</div>
 	</div>
 	</div>
-	<div id='submenu-container' class='hidden-phone' >{% include 'yabase/app/common/subMenu.html' %}</div>
+	<div id='submenu-container' >{% include 'yabase/app/common/subMenu.html' %}</div>
 
 <div class="modal hide fade" id="modal-share">
     <div class="modal-header">
