--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -96,6 +96,7 @@
        var g_has_radios = {% if has_radios %}true{% else %}false{% endif %};
        var g_page = '{{ g_page }}';
        var g_bootstrapped_data = {% if bdata %}{{ bdata|safe }}{% else %}undefined{% endif %};
+       var g_default_radio_uuid = '{{ current_uuid }}';
     </script>
 
 
