static version of notification page

--- a/yaapp/templates/yabase/app/home/homePage.html
+++ b/yaapp/templates/yabase/app/home/homePage.html
@@ -1,7 +1,7 @@
 {% extends "yabase/webapp.html" %}
 {% load i18n %}
 {% block content %}
-<div class='container' id='webapp-content'/>
+<div class='container' id='webapp-content'>
     <div>
         <ul id='selected-radios' class='radio-cells'>
             {% for radio in radios %}
