--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -1,11 +1,12 @@
 {% load i18n %}
 <div class='radio-cell'>
-	<div class="radio-border" style='display:none;'>
+	<div class="radio-border hidden-phone" style='display:none;'>
 		<img src="/media/app/images/radio/radio-hover-border.png" alt="Radio Hover Border">
     </div>
 	<div class="radio-container">
 		<div class='picture'>
-	    <a href='/app/radio/<% uuid %>/'><img src='<% picture %>' width='210' height='210'/><a>
+	    <a class='big-profile-picture' href='/app/radio/<% uuid %>/'><img src='<% picture %>' width='210' height='210'/><a>
+	    <a class='small-profile-picture' href='/app/radio/<% uuid %>/'><img src='<% picture %>' width='145' height='145'/><a>
 	    </div>
 
 		<div class='mask' style='display:none;'>
