--- a/yaapp/templates/yabase/app/gifts/gift.mustache
+++ b/yaapp/templates/yabase/app/gifts/gift.mustache
@@ -1,6 +1,7 @@
 {% load i18n %}
 <div class='gift-container'>
-    <div><img src='<%picture_url%>'/></div>
-    <div><% name %></div>
-    <div><% description %></div>
+    <img src='<%picture_url%>'/>
+    <div class='action'><%#action_url%><a class='yabutton-small' href='<% action_url %>' <%#data_url%>data-url='<%data_url%>'<%/data_url%> <%#target%>target='<%target%>'<%/target%>>{% trans "Complete action" %}</a><%/action_url%></div>
+    <h4><% name %></h4>
+    <p><% description %></p>
 </div>
