updated gift css

--- a/yaapp/templates/yabase/app/notifications/notificationsPage.html
+++ b/yaapp/templates/yabase/app/notifications/notificationsPage.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class='container' id='webapp-content'>
     <div class='row-fluid'>
-        <div class='span12 notifications-container'>
+        <div class='span12 gifts-container'>
             <h1>{% trans "Notifications" %}</h1>
             <button type="button" class="yabutton-small right" id='mark-all-read-btn'>{% trans "Mark all as read" %}</button>
 
