--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3249,9 +3249,42 @@ ul .radio-with-stats-cells li {
  * Gift
  */
 
-.gift-container {
-    margin:12px;
+
+.gifts-container {
+    position:relative;
+    border-radius:7px;
+    box-shadow:0px 1px 4px #e2e2e2;
+    background-image: linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
+    background-image: -o-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
+    background-image: -moz-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
+    background-image: -webkit-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
+    background-image: -ms-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
 }
+
+ul#gifts {
+    list-style: none;
+    margin-left: 0;
+}
+
+
+.gift-container {
+    position:relative;
+    min-height:67px;
+    border-top:1px solid #e3e3e3;
+    box-shadow: 0px 1px 1px white inset;
+    padding-left: 12px;
+    padding-top:12px;
+
+}
+
+.gift-odd {
+    background-color:#fdfdfd;
+}
+
+.gift-even {
+    background-color:#f4f4f4;
+}
+
 
 .gift-container img {
     float: left;
