adapted friends cells in Profile page for responsive

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3893,6 +3893,16 @@ a.yabutton-small {
         margin:3%;
     }
 
+    #user-profile #picture img {
+        height:140px;
+        width:140px;
+    }
+
+    #user-profile #picture {
+        height:140px;
+        width:150px;
+    }
+
     #infos {
         width:40%;
         height:170px;
@@ -4128,7 +4138,6 @@ a.yabutton-small {
         
         .radio-cells li,
         #radios li,
-        #friends-zone li,
         #favorites li {
             width:150px;
             height:150px;
@@ -4141,7 +4150,6 @@ a.yabutton-small {
         .radio-with-stats-cells li .radio-cell,
         .radio-cells li .radio-cell,
         #radios li .radio-cell,
-        #friends-zone li .radio-cell,
         #favorites li .radio-cell {
             width:150px;
             height:150px;
@@ -4151,7 +4159,6 @@ a.yabutton-small {
         .radio-with-stats-cells li .radio-cell .radio-container,
         .radio-cells li .radio-cell .radio-container,
         #friends-zone li .radio-cell .radio-container,
-        #favorites li .radio-cell .radio-container,
         #radios li .radio-cell .radio-container {
             width:145px;
             height:150px;
@@ -4161,7 +4168,6 @@ a.yabutton-small {
         .radio-with-stats-cells li .radio-cell .radio-container .picture,
         .radio-cells li .radio-cell .radio-container .picture,
         #radios li .radio-cell .radio-container .picture,
-        #friends-zone li .radio-cell .radio-container .picture,
         #favorites li .radio-cell .radio-container .picture {
             height:150px;
             width:150px;
@@ -4170,7 +4176,6 @@ a.yabutton-small {
         
         .radio-with-stats-cells li .radio-cell .radio-container .picture .caption,
         .radio-cells li .radio-cell .radio-container .picture .caption,
-        #friends-zone li .radio-cell .radio-container .picture .caption,
         #favorites li .radio-cell .radio-container .picture .caption,
         #radios li .radio-cell .radio-container .picture .caption {
             width:150px;
@@ -4214,6 +4219,46 @@ a.yabutton-small {
         .radio-cell .radio-id {
             display:none;
         }
+
+/*-- FRIEND-CELL --*/
+    
+    ul .user-cell,
+    ul .mask-user {
+        width:116px;
+        height:116px;
+    }
+
+    ul .user-cell .user-cell-inner {
+        width:116px;
+        height:116px;  
+    }
+    
+    ul .mask-user .caption-user {
+        height:75px;
+        overflow:hidden;
+        top: 23px;
+        left: 5px;
+    }
+
+    .caption-user h5,
+    .caption-user span {
+        font-size: 13px;
+    }
+
+    .user-cell-inner img {
+        max-width:100%;
+        max-height:100%;
+    }
+
+    #friends-zone ul {
+        margin-left:7.5%;
+    }
+
+    ul .user-cell,
+    ul .mask-user {
+        margin-right:6.5%;
+    }
+
 
 /*-- FOOTER --*/
 
